src/parser/snapshots/almond__parser__literal__tests__obj_lit-5.snap
---
source: src/parser/literal.rs
expression: "parse_literal(r#\"{\n                    test: function () {\n                        return {};\n                    },\n                    value: 1 + 2,\n                    foo: \"abc\"\n                }\"#.into()).unwrap().1"
---
{
  "type": "ObjectExpression",
  "properties": [
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "test",
        "start": 22,
        "end": 26
      },
      "value": {
        "type": "FunctionExpression",
        "id": null,
        "params": [],
        "body": {
          "type": "BlockStatement",
          "body": [
            {
              "type": "ReturnStatement",
              "argument": {
                "type": "ObjectExpression",
                "properties": [],
                "start": 73,
                "end": 75
              },
              "start": 66,
              "end": 76
            }
          ],
          "start": 40,
          "end": 98
        },
        "async": false,
        "start": 28,
        "end": 98
      },
      "kind": "init",
      "start": 22,
      "end": 98
    },
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "value",
        "start": 120,
        "end": 125
      },
      "value": {
        "type": "BinaryExpression",
        "operator": "+",
        "left": {
          "type": "Literal",
          "value": 1.0,
          "start": 127,
          "end": 128
        },
        "right": {
          "type": "Literal",
          "value": 2.0,
          "start": 131,
          "end": 132
        },
        "start": 127,
        "end": 132
      },
      "kind": "init",
      "start": 120,
      "end": 132
    },
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "foo",
        "start": 154,
        "end": 157
      },
      "value": {
        "type": "Literal",
        "value": "abc",
        "start": 159,
        "end": 164
      },
      "kind": "init",
      "start": 154,
      "end": 164
    }
  ],
  "start": 0,
  "end": 182
}
