src/parser/snapshots/almond__parser__literal__tests__obj_lit-7.snap
---
source: src/parser/literal.rs
expression: "parse_literal(r#\"{\n                    get: test() ? function () {\n                        return 0;\n                    } : function () {\n                        return 1;\n                    },\n                    foo: bar\n                }\"#.into()).unwrap().1"
---
{
  "type": "ObjectExpression",
  "properties": [
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "get",
        "start": 22,
        "end": 25
      },
      "value": {
        "type": "ConditionalExpression",
        "test": {
          "type": "CallExpression",
          "callee": {
            "type": "Identifier",
            "name": "test",
            "start": 27,
            "end": 31
          },
          "arguments": [],
          "start": 27,
          "end": 33
        },
        "consequent": {
          "type": "FunctionExpression",
          "id": null,
          "params": [],
          "body": {
            "type": "BlockStatement",
            "body": [
              {
                "type": "ReturnStatement",
                "argument": {
                  "type": "Literal",
                  "value": 0.0,
                  "start": 81,
                  "end": 82
                },
                "start": 74,
                "end": 83
              }
            ],
            "start": 48,
            "end": 105
          },
          "async": false,
          "start": 36,
          "end": 105
        },
        "alternate": {
          "type": "FunctionExpression",
          "id": null,
          "params": [],
          "body": {
            "type": "BlockStatement",
            "body": [
              {
                "type": "ReturnStatement",
                "argument": {
                  "type": "Literal",
                  "value": 1.0,
                  "start": 153,
                  "end": 154
                },
                "start": 146,
                "end": 155
              }
            ],
            "start": 120,
            "end": 177
          },
          "async": false,
          "start": 108,
          "end": 177
        },
        "start": 27,
        "end": 177
      },
      "kind": "init",
      "start": 22,
      "end": 177
    },
    {
      "type": "Property",
      "key": {
        "type": "Identifier",
        "name": "foo",
        "start": 199,
        "end": 202
      },
      "value": {
        "type": "Identifier",
        "name": "bar",
        "start": 204,
        "end": 207
      },
      "kind": "init",
      "start": 199,
      "end": 207
    }
  ],
  "start": 0,
  "end": 225
}
